--- a/.github/workflows/dockerhub-dev.yml
+++ b/.github/workflows/dockerhub-dev.yml
@@ -3,7 +3,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Publish Docker image of BioDynaMo (development version) on Dockerhub
+name: Docker image - development
 
 on:
   schedule:
