--- a/.github/workflows/dockerhub-release.yml
+++ b/.github/workflows/dockerhub-release.yml
@@ -3,7 +3,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Publish Docker image of BioDynaMo (release version) on Dockerhub
+name: Docker image - release
 
 on:
   schedule:
